--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.2.4",
   "description": "",
   "main": "./lib/index.js",
-  "files": ["lib"],
+  "files": [
+    "lib"
+  ],
   "scripts": {
     "coverage": "nyc npm run test",
     "test": "mocha ./src/**/*-spec.js --require babel-core/register",
